--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
             <p class="type">Clock</p>
         </div>
 
-        <div class="outer-wrapper">
-            <div class="clock hidden">
+        <div class="main-container">
+            <div class="clock">
                 <div class="wrapper">
                     <div class="main">
                         <div class="hour">
-                            <p class="number" id="hour">02</p>
+                            <p class="number" id="hour">20</p>
                             <p>hours</p>
                         </div>
                         <p class="colon">:</p>
                         <div class="min">
-                            <p class="number" id="min">02</p>
+                            <p class="number" id="min">00</p>
                             <p>minutes</p>
                         </div>
                         <p class="colon">:</p>
                         <div class="sec">
-                            <p class="number" id="sec">02</p>
+                            <p class="number" id="sec">00</p>
                             <p>seconds</p>
                         </div>
                         <div class="ampm">
@@ -40,8 +40,8 @@
                     </div>
                 </div>
                 <div class="btns">
-                    <button class="btn">Stopwatch</button>
-                    <button class="btn">Timer</button>
+                    <button class="btn stopwatch-btn">Stopwatch</button>
+                    <button class="btn timer-btn">Timer</button>
                 </div>
             </div>
 
@@ -63,18 +63,18 @@
                             <p>seconds</p>
                         </div>
                         <p class="colon">:</p>
-                        <div class="milisecond">
+                        <div class="ms">
                             <p class="number" id="stopwatch-ms">00</p>
-                            <p>milisecond</p>
+                            <p>miliseconds</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="laps">
-            <!--   <div class="lap active">
+                    <!--   <div class="lap active">
                         <p>lap 2</p>
                        <p>00:00</p>
-                   </div>
+                    </div>
                    <div class="lap">
                        <p>lap 1</p>
                         <p>00:00</p>
@@ -91,7 +91,7 @@
 
             </div>
 
-            <div class="timer">
+            <div class="timer hidden">
                 <div class="wrapper">
                     <div class="main">
                         <div class="hour">
@@ -109,9 +109,9 @@
                             <p>seconds</p>
                         </div>
                         <p class="colon">:</p>
-                        <div class="milisecond">
+                        <div class="ms">
                             <p class="number" id="timer-ms">00</p>
-                            <p>milisecond</p>
+                            <p>miliseconds</p>
                         </div>
                     </div>
                 </div>
